<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="10dp">

    <EditText
        android:hint="@string/enter_username"
        android:id="@+id/username_et"
        android:layout_width="200dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@id/username_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/username_tv"
        app:layout_constraintTop_toTopOf="@id/username_tv"
        app:layout_constraintVertical_bias="1.0"
        android:autofillHints="username" />

    <TextView
        android:id="@+id/username_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="72dp"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="68dp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="@id/username_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_tv" />

    <EditText
        android:hint="@string/enter_password"
        android:layout_width="200dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@id/password_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/password_tv"
        app:layout_constraintTop_toBottomOf="@id/username_et"
        app:layout_constraintTop_toTopOf="@id/password_tv"
        app:layout_constraintVertical_bias="1.0"
        android:autofillHints="password" />

    <CheckBox
        android:id="@+id/remember_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/remember_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/username_et" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remember_checkbox"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>